# cocopaths

./: .gitignore  LICENSE  README.md  enviroment.yml  environment.yml  pyproject.toml
.github/workflows/: test.yml
analysis/: 5_steps_out.tsv  6_steps_out.tsv  7_steps_out.tsv  README.md  analysis.py  analyze_set.py  compare_path_sets.py  fixed_analyze_set.py  obj_test_test.py  obj_tester.py  path_check.py  path_generator.py
analysis/folding_paths/: 3_FPs.txt  5_FPs.txt  6_FPs.txt  Old_2_FPs.txt  old_4_FPs.txt  old_7_FPs.txt  selected_fps.txt
analysis/obj_test/: drtrafo_parser.py  obj_test_fp3.py
analysis/slurm/: README.md  analyse_output.py  check_drt_output.py  make_que.sh  obj_tester.sh  queue_file.txt  slurm_obj_test.py  slurm_obj_tester.py  test_obj.sh
cocopaths/: README.md  __init__.py  cocodesign.py  cocopath.py  cocopath_graph.py  cocopath_new.py  cocopaths.py  cocosim.py  convert_functions.py  mod_condense.py  path_to_seq.py  pseudocodes.md  utils.py
copaths/: __init__.py  cocosim.py  convert_functions.py  inequality_solver.py  new_path_to_seq.py  path_to_seq.py
examples/: README.md  d_seq.txt  d_seq_1.txt  example_input.pil  fp_1.txt  fp_2.txt  fp_3.txt  fp_4.txt
tests/: README.md  __init__.py  test_cocodesign.py  test_cocopaths.py  test_cocosim.py  test_new_path_to_seq.py  test_path_to_seq.py
tests/test_cocosim_inputs/: calc_macrostate1.txt  calc_macrostate2.txt  calc_macrostate3.txt  calc_macrostate4.txt  cutoff_transient_1.txt  cutoff_transient_4.txt  macro_cutoff_2.txt  macro_cutoff_3.txt  map_transient_1.txt  map_transient_2.txt  map_transient_3.txt  map_transient_4.txt
