[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cocopaths"
description = "A compiler for cotranscriptional folding paths"
authors = [{name = "Laurenz Miksch", email = "mikschlaurenz@gmail.com"}]
readme = "README.md"
keywords = ["cotranscriptional folding", "RNA", "secondary structure","Rna design"]
license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 2 - Pre-Alpha",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.8"
#dependencies = []
dynamic = ["version"]

dependencies = [
    "ViennaRNA>=2.5.0",  # Adjust the version as necessary
]



[project.scripts]
cocopath = "cocopaths.cocopath:main"
cocosim = "cocopaths.cocosim:main"
cocodesign = "cocopaths.cocodesign:main"

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.urls]
Home = "https://github.com/lmiksch/cocopaths"